xwayland 23.0.99.901 prerelease - broken with vulkan renderer from wlroots
wlroots equivalent issue: wlroots/wlroots#3569 (closed)
i can reproduce this myself, and reverting the entire dmabuf v4 support from !818 (merged) on the 23.0.99.901 tag does fix it (just to confirm).
essentially, starting a wlroots compositor with WLR_RENDERER=vulkan
(0.16.1 requires validation layers for it, master doesn't), then launching anything via xwayland on 23 hangs forever, e.g. GDK_BACKEND=x11 thunar
.
i'm not sure who's issue this really is, or how to debug it further, so some pointers would be nice. all i can say is that vulkan wlroots paired with xwayland 23 doesn't work.