hw/xwayland/xwayland-window.c
@@ -1014,6 +1014,7 @@ xwl_device_formats_destroy(struct xwl_device_formats *dev_formats)
     for (int j = 0; j < dev_formats->num_formats; j++)
         free(dev_formats->formats[j].modifiers);
     free(dev_formats->formats);
+    drmFreeDevice(&dev_formats->drm_dev);
 }
 
 void
